# northwind-fastapi

./: .dockerignore  Dockerfile  models.py  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py
app/api/v1/: api.py  deps.py
app/api/v1/endpoints/: categories.py  customers.py  employees.py  employees_territories.py  orders.py  orders_details.py  products.py  regions.py  shippers.py  suppliers.py  territories.py  us_states.py
app/core/: config.py
app/crud/: __init__.py  base.py  category.py  customer.py  customer_customer_demo.py  customer_demographics.py  employee.py  employee_territory.py  order.py  order_detail.py  product.py  region.py  shipper.py  supplier.py  territory.py  us_state.py
app/crudrouter/: __init__.py  _base.py  _exceptions.py  _helpers.py  _search.py  _utils.py  sqlalchemy.py
app/routers/customers/: crud.py  router.py
app/schemas/: __init__.py  category.py  customer.py  employee.py  order.py  product.py  region.py  shipper.py  supplier.py  territory.py  us_state.py
app/tests/: test_sql_app.py
