[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <rpaa01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.27"}
fastapi = {extras = ["all"], version = "^0.110"}
sqlalchemy = "^2.0"
psycopg = {extras = ["binary"], version = "^3.1"}
pydantic-settings = "^2.2"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.2.2"
pre-commit = "^3.6.2"
pytest-env = "^1.1.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest_env]
PROJECT_NAME = "NorthWind FastAPI project"
SERVER_HOST = "http://localhost"
DATABASE_USER = "postgres.rrazapummdhvzjlonnbm"
DATABASE_PASSWORD = "WM0m71fb5APk8jNe"
DATABASE_HOST = "aws-0-us-west-1.pooler.supabase.com"
DATABASE_DB = "postgres"